[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/input_path.gd" type="Script" id=1]

[node name="InputPath" type="VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -245.0
margin_right = 245.0
margin_bottom = 42.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 490.0
margin_bottom = 14.0
text = "Title"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 490.0
margin_bottom = 42.0

[node name="LBPath" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
text = "     Path "

[node name="Path" type="LineEdit" parent="HBoxContainer"]
margin_left = 56.0
margin_right = 462.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFile" type="Button" parent="HBoxContainer"]
margin_left = 466.0
margin_right = 490.0
margin_bottom = 24.0
text = "..."

[node name="Anchor" type="Control" parent="."]
margin_top = 46.0
margin_right = 490.0
margin_bottom = 46.0

[node name="FileDialog" type="FileDialog" parent="Anchor"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -414.0
margin_top = 12.0
margin_right = -14.0
margin_bottom = 389.0
rect_min_size = Vector2( 150, 52.5 )
window_title = ""
mode_overrides_title = false
access = 2
current_dir = "/Godot/py to exe"
current_path = "/Godot/py to exe/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="HBoxContainer/Path" to="." method="_on_Path_text_changed"]
[connection signal="pressed" from="HBoxContainer/OpenFile" to="." method="_on_OpenFile_pressed"]
[connection signal="dir_selected" from="Anchor/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="Anchor/FileDialog" to="." method="_on_FileDialog_file_selected"]
